RESOLVED FIXED167950
SigillCrashAnalyzer::analyze() should use a do-while loop instead of a lambda.
https://bugs.webkit.org/show_bug.cgi?id=167950
Summary SigillCrashAnalyzer::analyze() should use a do-while loop instead of a lambda.
Mark Lam
Reported 2017-02-07 12:17:45 PST
Michael pointed out to me that lambda's aren't free, and suggested I use a do-while loop instead. I didn't think to use a loop when I first wrote this code (brain malfunction), but had reasoned that the compiler should be able to realize that the lambda does not escape, and hence can be inlined complete. However, a quick disassembly of the compiled code reveals that this is not the case: the compiler did not inline the lambda. Even though this code is not in a performance critical path, I'll switch the code to using a do-while loop just so it doesn't encourage uses of lambda (like this) where not needed.
Attachments
proposed patch. (3.66 KB, patch)
2017-02-07 12:24 PST, Mark Lam
no flags
Mark Lam
Comment 1 2017-02-07 12:24:39 PST
Created attachment 300834 [details] proposed patch.
WebKit Commit Bot
Comment 2 2017-02-07 13:23:51 PST
Comment on attachment 300834 [details] proposed patch. Clearing flags on attachment: 300834 Committed r211834: <http://trac.webkit.org/changeset/211834>
WebKit Commit Bot
Comment 3 2017-02-07 13:23:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.