SigillCrashAnalyzer::analyze() should use a do-while loop instead of a lambda. https://bugs.webkit.org/show_bug.cgi?id=167950

Reviewed by Michael Saboff.

Lambdas aren't free (apparently, the compiler isn't able to detect that the
lambda does not escape and can be inlined completely).  So, use a do-while loop
instead since we don't really need a lambda here.

* tools/SigillCrashAnalyzer.cpp:


Canonical link: https://commits.webkit.org/184983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211834 268f45cc-cd09-0410-ab3c-d52691b4dbfc